# lightshuttle

./: .env.example  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.fr.md  README.md  docker-compose.yml  seccomp-profile.json
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: ci.yml  docker-publish.yml
checksums/: docker-25.0.3.tgz.sha256  docker-28.3.3.tgz.sha256
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/tests/: cli.rs
core/: Cargo.toml
core/src/: app.rs  docker.rs  lib.rs  main.rs
core/src/routes/: apps.rs  mod.rs
core/tests/: apps_get.rs  apps_post.rs  version.rs
daemon/: Cargo.toml
daemon/src/: app.rs  errors.rs  lib.rs  main.rs  metrics.rs  openapi.rs
daemon/src/api/: auth.rs  error.rs  middleware.rs  mod.rs  routes.rs
daemon/src/docker/: container.rs  mod.rs  models.rs
daemon/src/models/: namespace.rs
daemon/src/routes/: apps.rs  health.rs  metrics.rs  mod.rs  models.rs  version.rs
daemon/src/services/: docker.rs
daemon/tests/: apps_delete.rs  apps_get.rs  apps_post.rs  auth.rs  cors.rs  docker.rs  error_response.rs  health.rs  metrics.rs  utils.rs  version.rs
dashboard/: Cargo.toml
docs/: SECURITY.md
docs/en/: glossary.md  security.md
docs/fr/: glossary.md  security.md
openapi/: openapi.yaml
src/cli/src/: main.rs
src/core/: Cargo.toml
src/core/src/: app.rs  docker.rs  lib.rs  main.rs
src/core/src/routes/: apps.rs  mod.rs
src/core/tests/: apps.rs  apps_delete.rs  apps_get.rs  apps_post.rs  docker.rs  health.rs  metrics.rs  utils.rs
src/core/tests/routes/: apps_get.rs  apps_post.rs
src/dashboard/src/: main.rs
