[package]
name = "lightshuttle_core"
version = "0.3.0"
edition = "2021"

[lib]
name = "lightshuttle_core"
path = "src/lib.rs"

[dependencies]
# Web framework (router, handlers)
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Documentation
utoipa = "4"
utoipa-swagger-ui = "4"

# Error handling
thiserror = "1.0"

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Middleware: CORS
tower-http = { version = "0.5", features = ["cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Utilities for testing (oneshot, etc.)
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }
