[package]
name = "lightshuttle_core"
version = "0.3.0"
edition = "2021"

[lib]
name = "lightshuttle_core"
path = "src/lib.rs"

[dependencies]
# Web framework (router, handlers)
axum = "0.7"

# Async runtime
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "signal", "time", "net"] }

# Documentation (optional)
utoipa = { version = "5", features = ["yaml"], optional = true }
utoipa-swagger-ui = { version = "8", features = ["axum"], optional = true }

# Error handling
thiserror = "1.0"

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

once_cell = "1"

users = "0.11"

# Middleware: CORS
tower-http = { version = "0.5", features = ["cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Utilities for testing (oneshot, etc.)
http-body-util = "0.1"
tower = { version = "0.4", features = ["util"] }

# UUID generation for tracing
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
openapi = ["utoipa", "utoipa-swagger-ui"]

[[bin]]
name = "openapi_export"
path = "src/bin/openapi_export.rs"
required-features = ["openapi"]
